--- a/Amabam/app/src/main/AndroidManifest.xml
+++ b/Amabam/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Amabam">
         <activity
+            android:name=".ui.register_page"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login_page"
+            android:exported="false" />
+        <activity
             android:name=".ui.categories_hangman"
             android:exported="false" />
         <activity
